add create product endpoint

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -3,7 +3,7 @@
 {% set path = 'market' %}
 
 {% block elements %}
-	<div class="am-Profile-banner" style="background-image: url('http://127.0.0.1:3000/img/banners/am_cover.jpg')">
+	<div class="am-Profile-banner" style="background-image: url('http://www.wallpapereast.com/static/images/Dragon-Backgrounds-Wallpaper-Hd-44.jpg')">
 		{% if owner %}
 			<i class="fa fa-pencil-square-o"></i>
 		{% endif %}
