--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -110,7 +110,7 @@
 		<div class="grid-item">
 			<div class="work-card">
 				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
-					<img src="<%= addFilter(photo, 'w_160,q_80') %>">
+					<img src="<%= addFilter(photo, 'w_160') %>">
 				</a>
 			</div>
 		</div>
@@ -125,7 +125,7 @@
 		  		<div class="artist-card-info">
 		  			<img src="<%=photo%>">
 		  			<div>
-		  				<p class="name uppercase"><%=firstname%></p>
+		  				<p class="name uppercase"><%=firstname%> <%=lastname%></p>
 		  				<p class="city"><%=city%>, <%=country%></p>
 		  				<p class="stats"><i class="bi_ecommerce-diamon"></i> <%=numOfFollowers%></p>
 		  			</div>
@@ -133,7 +133,7 @@
 				</a>
 	  		<div class="artist-card-works">
 					<% _.each(Works, function(work) { %>
-						<div class="artist-card-work" style="background-image: url('<%= addFilter(work.photo, 'w_120,h_120,c_fill,q_80') %>')"></div>
+						<div class="artist-card-work" style="background-image: url('<%= addFilter(work.photo, 'w_120,h_120,c_fill') %>')"></div>
 					<% }); %>
 	  		</div>
 	  		<div class="artist-card-follow">
@@ -149,17 +149,19 @@
 
 	<script type="text/template" id="template-product">
 		<div class="grid-item">
-	  	<div class="product-card">
-				<div class="product-card-image" style="background-image: url('<%=photo%>')"></div>
-	  		<div class="product-card-data">
-	  			<p><%= name %></p>
-	  			<p><%= User.firstname %></p>
-	  		</div>
-	  		<div class="product-card-stats">
-	  			<p><%= price %></p>
-	  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="fa fa-diamond"></i></p>
-	  		</div>
-	  	</div>
+			<a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
+		  	<div class="product-card">
+					<div class="product-card-image" style="background-image: url('<%=photo%>')"></div>
+		  		<div class="product-card-data">
+		  			<p><%= name %></p>
+		  			<p><%= User.firstname %></p>
+		  		</div>
+		  		<div class="product-card-stats">
+		  			<p><%= price %></p>
+		  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="fa fa-diamond"></i></p>
+		  		</div>
+		  	</div>
+		</a>
 	  </div>
 	</script>
 
@@ -186,9 +188,10 @@
 			</a>
 		</div>
 	</script>
+
 	<script type="text/template" id="template-carrouselItem">
 		<a href='/user/<%=User.username%>/work/<%=nameSlugify%>'>
-			<div class="am-MoreImages" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill,q_80')%>);"></div>
+			<div class="am-MoreImages" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill')%>);"></div>
 		</a>
 	</script>
 
