--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -86,7 +86,7 @@ $(document).ready(function() {
 			data: {data: JSON.stringify(formData)}
 		}).then(function(response) {
 			if(response.status === 200) {
-				var work = response.work;
+				var work = response.data.work;
 				location.href = DataApp.currentUser.url + '/work/' + work.nameSlugify + '/published';
 			}
 		});
