--- a/app/views/user/work/published.html
+++ b/app/views/user/work/published.html
@@ -21,24 +21,26 @@
   	</div>
   	<div class="u-padding-top-20" style="oferoverflow: hidden;">
   		<div class="grid-50">
-  			<a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}' class="button inline upload u-margin-top-30 upload_button">
-  				<i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
-  			</a>
+        <button class="button inline upload u-margin-top-30 upload_button">
+          <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}'>
+            <i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
+          </a>
+        </button>
   		</div>
   		<div class="grid-50">
-  			<a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/sell' class="button inline upload u-margin-top-30 upload_button" data-color="green">
-  				<i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA
-  			</a>
+  			<button class="button inline upload u-margin-top-30 upload_button" data-color="green">
+          <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/sell'><i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA</a>
+  			</button>
   		</div>
   		<div class="grid-50 suffix-50">
-  			<a href='/user/{{work.User.username}}/work/add' class="button inline upload u-margin-top-30 upload_button">
-  				<i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA
-  			</a>
+  			<button class="button inline upload u-margin-top-30 upload_button">
+          <a href='/user/{{work.User.username}}/work/add'><i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA</a>
+  			</button>
   		</div>
   		<div class="grid-50">
-  			<a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/edit' class="button inline upload u-margin-top-30 upload_button">
-  				<i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA
-  			</a>
+  			<button class="button inline upload u-margin-top-30 upload_button">
+          <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/edit'><i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA</a>
+  			</button>
   		</div>
   		<div class="grid-50">
   			<button class="button inline upload u-margin-top-30 upload_button" data-color="red">
