add a href to buttons in published view

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1334,6 +1334,7 @@ body
 		font-size 10px
 		color white
 		padding 15px 20px
+		cursor pointer
 		&[data-color="blue"]
 			background #277cea
 		&[data-color="green"]
@@ -1352,9 +1353,13 @@ body
 			&[data-color="green"]
 				background #85d78d
 				color white
+				a
+					color white
 			&[data-color="red"]
 				background #ff6666
 				color white
+				a
+					color white
 			i
 				font-size 2em
 
