--- a/app/views/user/work/published.html
+++ b/app/views/user/work/published.html
@@ -21,26 +21,26 @@
   	</div>
   	<div class="u-padding-top-20" style="oferoverflow: hidden;">
   		<div class="grid-50">
-        <button class="button inline upload u-margin-top-30 upload_button">
-          <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}'>
+        <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}'>
+          <button class="button inline upload u-margin-top-30 upload_button">
             <i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
-          </a>
-        </button>
+          </button>
+        </a>
   		</div>
   		<div class="grid-50">
-  			<button class="button inline upload u-margin-top-30 upload_button" data-color="green">
-          <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/sell'><i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA</a>
-  			</button>
+  			<a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/sell'>
+          <button class="button inline upload u-margin-top-30 upload_button" data-color="green"><i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA</button>
+  			</a>
   		</div>
   		<div class="grid-50 suffix-50">
-  			<button class="button inline upload u-margin-top-30 upload_button">
-          <a href='/user/{{work.User.username}}/work/add'><i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA</a>
-  			</button>
+  			<a href='/user/{{work.User.username}}/work/add'>
+          <button class="button inline upload u-margin-top-30 upload_button"><i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA</button>
+  			</a>
   		</div>
   		<div class="grid-50">
-  			<button class="button inline upload u-margin-top-30 upload_button">
-          <a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/edit'><i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA</a>
-  			</button>
+  			<a href='/user/{{work.User.username}}/work/{{work.nameSlugify}}/edit'>
+          <button class="button inline upload u-margin-top-30 upload_button"><i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA</button>
+  			</a>
   		</div>
   		<div class="grid-50">
   			<button class="button inline upload u-margin-top-30 upload_button" data-color="red">
