add new icons to single work

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1760,6 +1760,7 @@ body
 		text-align center
 		cursor pointer
 		min-width 100px
+		color #333
 		&[selected="true"]
 			background white
 			border-top solid 1px #eeeeee
