--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -92,12 +92,14 @@
 					<div class="u-center">
 						<table class="am-Single-stats u-margin-top-10">
 						  <tr>
-						    <td><i class="fa fa-eye"></i></td>
+						    <!-- <td><i class="fa fa-eye"></i></td> -->
+						    <td><i class="bi_interface-view"></i></td>
 						    <td><p>VISTAS</p></td>
 						    <td><span>{{work.views}}</span></td>
 						  </tr>
 						  <tr>
-						    <td><i class="fa fa-diamond"></i></td>
+						    <!-- <td><i class="fa fa-diamond"></i></td> -->
+						    <td><i class="bi_ecommerce-diamon"></i></td>
 						    <td><p>VALORACIONES</p></td>
 						    <td><span>{{work.likes || 0}}</span></td>
 						  </tr>
@@ -134,7 +136,8 @@
 								<a href="/user/{{work.User.username}}/work/{{work.nameSlugify}}">
 									<div class="single-tab index">
 										<p>+ OBRAS</p>
-										<i class="fa fa-cube"></i>
+										<!-- <i class="fa fa-cube"></i> -->
+										<i class="bi_misc-cube"></i>
 									</div>
 								</a>
 								<a href="/user/{{work.User.username}}/work/{{work.nameSlugify}}/reviews">
@@ -146,7 +149,8 @@
 								<a href="/user/{{work.User.username}}/work/{{work.nameSlugify}}/tags">
 									<div class="single-tab tags">
 										<p>TAGS</p>
-										<i class="fa fa-align-left"></i>
+										<!-- <i class="fa fa-align-left"></i> -->
+										<i class="bi_editorial-left-align"></i>
 									</div>
 								</a>
 							</div>
