correction button sell

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -158,7 +158,7 @@
 		  		</div>
 		  		<div class="product-card-stats">
 		  			<p><%= price %></p>
-		  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="fa fa-diamond"></i></p>
+		  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="bi_ecommerce-diamon"></i></p>
 		  		</div>
 		  	</div>
 		</a>
