--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -79,8 +79,11 @@
   	<div class="grid-50 mobile-grid-100">
   		<p class="title">Peso</p>
   		<input name='weight' class="input" type="number" placeholder="Cuantos kilos pesa"/>
-  	</div>
-    <button class="button" data-color="blue">VENDER</button>
+    </div>
+    <div class="grid-100">
+      <button class="button" data-color="blue">VENDER</button>
+    </div>
+
   </form>
 </div>
 </div>
