replace  currenpath from routers

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -138,7 +138,7 @@
 	  		</div>
 	  		<div class="artist-card-follow">
 					<% if(following) { %>
-						<button class="am-Follow-button">SIGUIENDO</button>
+						<button class="am-Follow-button following">SIGUIENDO</button>
 					<% } else { %>
 						<button class="am-Follow-button">+ SEGUIR</button>
 					<% } %>
